@@ -1,5 +1,0 @@
-the official svn tree has moved
-
-please see: https://sourceforge.net/p/fceultra/code/
-
-we migrated on 5/26
